--- a/sites/creativecommons.tw/files/css/custom.css
+++ b/sites/creativecommons.tw/files/css/custom.css
@@ -16,4 +16,17 @@ div.card-header {
 }
 div.card-body   {
     text-align: center;
+    line-height: 30vh;
+    font-family: "Noto Sans CJK Tc Reguler";
+    font-size: 1.1em;
+}
+div.card-deck   {
+    margin: 5vh auto;
+    width: 70vw;
+}
+h1.title    {
+    margin: 10vh auto;
+    text-align: center;
+    font-family: "Noto Sans CJK Tc Bold";
+    font-size: 1.5em;
 }
