--- a/sites/creativecommons.tw/files/css/custom.css
+++ b/sites/creativecommons.tw/files/css/custom.css
@@ -30,3 +30,25 @@ h1.title    {
     font-family: "Noto Sans CJK Tc Bold";
     font-size: 1.5em;
 }
+div.iframe  {
+    border: none;
+    width: 500px;
+    height: 100%;
+    margin-left: -15px;
+    margin-right: 3vw;
+}
+iframe  {
+    width: 100%;
+    height: 70vh;
+    border: none;
+}
+div.links   {
+    width: 35vw;
+    background-color: #D8D8D8;
+    border-radius: 10px;
+    font-family: "Noto Sans CJK Tc Regular";
+    font-size: 1.1em;
+}
+div.container   {
+    margin-bottom: 10vh;
+}
