--- a/sites/creativecommons.tw/files/css/custom.css
+++ b/sites/creativecommons.tw/files/css/custom.css
@@ -33,22 +33,13 @@ h1.title    {
 }
 div.iframe  {
     border: none;
-    width: 500px;
+    width: 30vw;
     height: 100%;
-    margin-left: -15px;
-    margin-right: 3vw;
 }
 iframe  {
     width: 100%;
     height: 70vh;
     border: none;
-}
-div.links   {
-    width: 35vw;
-    background-color: #D8D8D8;
-    border-radius: 10px;
-    font-family: "Noto Sans CJK Tc Regular";
-    font-size: 1.1em;
 }
 div.container   {
     margin-bottom: 10vh;
@@ -56,4 +47,46 @@ div.container   {
 img.card-img-top    {
     height: 40vh;
     width: 20vw;
+}
+div.main-container  {
+    width: 72vw;
+    margin: 0 auto;
+}
+div.main    {
+    width: 100%;
+    margin-top: 10vh;
+}
+img.main-img    {
+    width: 60%;
+    padding: 0;
+}
+div.main-textblock   {
+    background-color: #1b1b1b;
+    color: #ffffff;
+    text-align: left;
+}
+p.main-text {
+    margin: 10% auto;
+    width: 90%;
+}
+div.links   {
+    width: 65vw;
+    font-family: "Noto Sans CJK Tc Regular";
+    height: 70vh;
+}
+div.icons   {
+    width: 13vw;
+    margin-left: 3vw;
+    height: 70vh;
+}
+h4.icon-title   {
+    font-family: "Noto Sans CJK Tc Medium";
+    font-size: 1.2em;
+}  
+div.description {
+    width: 13vw;
+    margin: 0 auto;
+}
+div.main-bottom {
+    margin-top: 5vh;
 }
