Fix font size and position

--- a/sites/creativecommons.tw/files/css/custom.css
+++ b/sites/creativecommons.tw/files/css/custom.css
@@ -18,16 +18,17 @@ div.card-body   {
     text-align: center;
     font-family: "Noto Sans CJK Tc Medium","微軟正黑體","Open Sans";
     font-weight: bolder;
-    font-size: 1.6em;
+    font-size: 1.8em;
     color: #000000;
     background-color: rgba(0, 0, 0, 0.2);
     background-image: url("sites/creativecommon.tw/files/Publicher.png");
     transition-duration: 0.2s;        
 }
 div.card-body > p   {
+    margin-top: 25%;
     vertical-align: middle;
     color: #ffffff;
-    opacity: 0.8;
+    opacity: 0.9;
     transition-duration: 0.2s;    
 }
 div.card-body:hover {
@@ -36,7 +37,7 @@ div.card-body:hover {
 }
 div.card-body:hover p   {
     opacity: 1.0;
-    font-size: 1.5em;
+    font-size: 1.2em;
     transition-duration: 0.2s;    
 }    
 div.card-deck   {
